--- a/.landscape.yml
+++ b/.landscape.yml
@@ -1,3 +1,8 @@
 ignore-paths:
-    - doc-src
-    - libmproxy/contrib
+  - doc-src
+  - libmproxy/contrib
+pylint:
+  disable:
+    - unpacking-non-sequence
+    - not-callable
+    - dangerous-default-value
